--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
-    "postcss-cli": "8.3.1",
-    "postcss": "8.2.9",
-    "autoprefixer": "10.2.5"
+    "postcss-cli": "9.0.2",
+    "postcss": "8.3.11",
+    "autoprefixer": "10.4.0",
+    "postcss-purgecss": "2.0.3",
   }
 }
