--- a/themes/blist-hugo-theme/package.json
+++ b/themes/blist-hugo-theme/package.json
@@ -27,3 +27,10 @@
     "not dead"
   ]
 }
+{
+  "dependencies": {
+    "postcss-cli": "9.0.2",
+    "postcss": "8.3.11",
+    "autoprefixer": "10.4.0",
+  }
+}
