Change config baseurl

--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseurl: https://blist.vercel.app
+baseurl: https://ethanwebbportfolio.netlify.app/
 metaDataFormat: yaml
 title: Blist Multilingual Theme
 theme: blist-hugo-theme
