Turn off search bar.

--- a/config.yaml
+++ b/config.yaml
@@ -21,14 +21,14 @@ languages:
           weight: 3
     params:
       introPhoto: /ethan.jpg
-      introSubtitle: 21 y/o MSc Statistics student who enjoys business, sports and using statistical analysis to make positive change.
+      introSubtitle: 21 y/o MSc Statistics student who enjoys business, sports and using statistical analysis to make a positive change in the world.
       introTitle: Hello, I'm Ethan Webb!
     weight: 1
 params:
   ascentColor: bg-blue-100
   copyright: Copyright © 2021 - Ethan Webb· All rights reserved
   darkModeToggle: yes
-  enableSearch: yes
+  enableSearch: no
   favicon: /favicon.svg
   homepage:
     social:
