--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseurl: https://ethanwebbportfolio.netlify.app/
+baseurl: https://mrethanwebb.com
 metaDataFormat: yaml
 title: Ethan Webb
 theme: blist-hugo-theme
