Change base Url again

--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseurl: https://mrethanwebb.com
+baseurl: https://www.mrethanwebb.com
 metaDataFormat: yaml
 title: Ethan Webb
 theme: blist-hugo-theme
