--- a/config.yaml
+++ b/config.yaml
@@ -10,7 +10,7 @@ languages:
     languageName: English
     menu:
       main:
-        - name: Blog
+        - name: Projects
           url: blog
           weight: 1
         - name: About
