--- a/config.yaml
+++ b/config.yaml
@@ -10,12 +10,12 @@ languages:
     languageName: English
     menu:
       main:
-        - name: Projects
-          url: blog
-          weight: 1
         - name: About
           url: page/about/
           weight: 2
+        - name: Projects
+          url: projects
+          weight: 1
     params:
       introPhoto: /ethan.jpg
       introSubtitle: 22 y/o MSc Statistics student who enjoys business, sports and using statistical analysis to make a positive change in the world.
