--- a/config.yaml
+++ b/config.yaml
@@ -29,7 +29,7 @@ languages:
     weight: 1
 params:
   ascentColor: bg-blue-100
-  copyright: Copyright © 2021 - Ethan Webb· All rights reserved
+  copyright: Copyright © 2021 - Varun A P· All rights reserved. Modified by Ethan Webb.
   darkModeToggle: yes
   enableSearch: no
   favicon: /favicon.svg
