--- a/config.yaml
+++ b/config.yaml
@@ -26,6 +26,7 @@ languages:
       introPhoto: /ethan.jpg
       introSubtitle: 22 y/o MSc Statistics student who enjoys business, sports and using statistical analysis to make a positive change in the world.
       introTitle: Hello, I'm Ethan Webb!
+      #button: page/about/
     weight: 1
 params:
   ascentColor: bg-blue-100
