--- a/config.yaml
+++ b/config.yaml
@@ -14,7 +14,7 @@ languages:
           url: page/about/
           weight: 1
         - name: Projects
-          url: blog
+          url: project
           weight: 2
         - name: CV
           url: 
