--- a/config.yaml
+++ b/config.yaml
@@ -61,3 +61,15 @@ markup:
       unsafe: yes
   highlight:
     style: dracula
+    
+education:
+  enable: true
+  title: "Education"
+  items:
+    - university: "University of Waterloo"
+      year: "2012-2017"
+      degree: "Bachelor of Applied Science (BASc), Electrical Engineering"
+
+    - university: "Sir John A Macdonald CI"
+      year: "2009-2012"
+      degree: "High School Diploma, Sciences, Math, Computer & Business Studies"
