--- a/config.yaml
+++ b/config.yaml
@@ -2,6 +2,20 @@ baseurl: https://www.mrethanwebb.com
 metaDataFormat: yaml
 title: Ethan Webb
 theme: blist-hugo-theme
+
+# education
+education:
+  enable: true
+  title: "Education"
+  items:
+    - university: "University of Waterloo"
+      year: "2012-2017"
+      degree: "Bachelor of Applied Science (BASc), Electrical Engineering"
+
+    - university: "Sir John A Macdonald CI"
+      year: "2009-2012"
+      degree: "High School Diploma, Sciences, Math, Computer & Business Studies"
+
 DefaultContentLanguage: en
 DefaultContentLanguageInSubdir: yes
 languages:
@@ -28,17 +42,6 @@ languages:
       introTitle: Hello, I'm Ethan Webb!
       #button: page/about/
     weight: 1
-    education:
-      enable: true
-      title: "Education"
-      items:
-        - university: "University of Waterloo"
-          year: "2012-2017"
-          degree: "Bachelor of Applied Science (BASc), Electrical Engineering"
-    
-        - university: "Sir John A Macdonald CI"
-          year: "2009-2012"
-          degree: "High School Diploma, Sciences, Math, Computer & Business Studies"
 params:
   ascentColor: bg-blue-100
   copyright: Copyright © 2021 - Varun A P· All rights reserved. Modified by Ethan Webb.
