--- a/config.yaml
+++ b/config.yaml
@@ -3,18 +3,6 @@ metaDataFormat: yaml
 title: Ethan Webb
 theme: blist-hugo-theme
 
-# education
-education:
-  title: "Education"
-  items:
-    - university: "University of Waterloo"
-      year: "2012-2017"
-      degree: "Bachelor of Applied Science (BASc), Electrical Engineering"
-
-    - university: "Sir John A Macdonald CI"
-      year: "2009-2012"
-      degree: "High School Diploma, Sciences, Math, Computer & Business Studies"
-
 DefaultContentLanguage: en
 DefaultContentLanguageInSubdir: yes
 languages:
@@ -35,6 +23,18 @@ languages:
         - name: Reading
           url: 
           weight: 4
+        # education
+    education:
+      enable: yes
+      title: "Education"
+      items:
+        - university: "University of Waterloo"
+          year: "2012-2017"
+          degree: "Bachelor of Applied Science (BASc), Electrical Engineering"
+    
+        - university: "Sir John A Macdonald CI"
+          year: "2009-2012"
+          degree: "High School Diploma, Sciences, Math, Computer & Business Studies"
     params:
       introPhoto: /ethan.jpg
       introSubtitle: 22 y/o MSc Statistics student who enjoys business, sports and using statistical analysis to make a positive change in the world.
