--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 baseurl: https://www.mrethanwebb.com
 metaDataFormat: yaml
-title: /EthanWebb.svg
+title: Ethan Webb
 theme: blist-hugo-theme
 
 DefaultContentLanguage: en
