Update Button Colour and Add LinkedIn Links

--- a/config.yaml
+++ b/config.yaml
@@ -37,7 +37,7 @@ params:
       description: Keep up to date by following my professional social channels.
       #dribbble: https://dribbble.com/
       github: https://github.com/
-      linkedin: https://linkedin.com/in/
+      linkedin: https://www.linkedin.com/in/ethan-webb10
       #medium: https://medium.com/
       #reddit: https://reddit.com/
       title: Follow me
